# py-rs-quant

./: .gitignore  Dockerfile  OPTIMIZATION_RESULTS.md  README.md  benchmark.py  benchmark_latency.py  docker-compose.yml  engine_stats.prof  improved_benchmark.py  plot_benchmark.py  plot_benchmark_trends.py  profile_engine.py  pyproject.toml  requirements.txt  test_rust.py
benchmark_trends_1744052577/: benchmark_summary.md
benchmark_trends_readme/: benchmark_summary.md
examples/: simple_simulation.py
matching_engine/: Cargo.toml
matching_engine/src/: lib.rs
py_rs_quant/: __init__.py  cli.py  main.py
py_rs_quant/analytics/: analyzer.py
py_rs_quant/api/: __init__.py  app.py  application.py  run_api.py
py_rs_quant/api/dependencies/: __init__.py  engines.py
py_rs_quant/api/models/: __init__.py  enums.py  requests.py  responses.py
py_rs_quant/api/routes/: __init__.py  health.py  market_data.py  orders.py
py_rs_quant/api/services/: __init__.py  trading.py
py_rs_quant/api/utils/: __init__.py  utils.py
py_rs_quant/core/: __init__.py  engine.py  enums.py  matcher.py  models.py  order_book.py  order_processor.py  rust_engine.py  statistics.py  trade_execution.py  utils.py
py_rs_quant/simulation/: simulator.py
src/python/: cli.py  main.py
src/python/api/: app.py
src/python/matching_engine/: python_engine.py
src/python/risk_management/: risk_manager.py
src/python/simulation/: simulator.py
src/rust/matching_engine/: Cargo.toml
tests/: __init__.py
tests/python/: test_api.py  test_matching_engine.py  test_risk_management.py
tests/rust/: test_matching_engine.rs
