[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "py-rs-quant"
version = "0.1.0"
description = "High-Performance Order Matching Engine and Trading Simulator"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "your-name", email = "your-email@example.com" }]

dependencies = [
  "fastapi>=0.104.0",
  "uvicorn[standard]>=0.23.2",
  "pydantic>=2.4.2",
  "numpy>=1.24.0",
  "pandas>=2.1.0",
  "matplotlib>=3.7.0",
  "plotly>=5.17.0",
]

[project.scripts]
trading-sim = "src.python.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "black>=23.0.0",
  "isort>=5.12.0",
  "mypy>=1.6.0",
  "pytest-asyncio>=0.21.0",
]

[tool.maturin]
module-name = "matching_engine"
python-source = "src/python"
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
