[package]
name = "matching_engine"
version = "0.1.0"
edition = "2021"
description = "High-performance order matching engine for trading systems"
authors = ["Your Name <your-email@example.com>"]

[lib]
name = "matching_engine"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.19", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
