[package]
name = "matching_engine"
version = "0.1.0"
edition = "2021"
description = "High-performance order matching engine for trading systems"
authors = ["Tom Tang <tombelieber3@gmail.com>"]

[lib]
name = "matching_engine"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.19", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.8"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
panic = "abort"
